--- a/text.ipynb
+++ b/text.ipynb
@@ -19,10 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New changes done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"New changes done\")"
+   ]
   }
  ],
  "metadata": {
