--- a/text.ipynb
+++ b/text.ipynb
@@ -33,6 +33,23 @@
    "source": [
     "print(\"New changes done\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello 2\")"
+   ]
   }
  ],
  "metadata": {
